--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- Firebase link -->
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
 
     <!-- Moment.js link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
@@ -50,7 +50,7 @@
                   <th scope="col">Destination</th>
                   <th scope="col">Frequency (min)</th>
                   <th scope="col">Next Arrival</th>
-                  <th scope="col">Miles Away</th>
+                  <th scope="col">Minutes Away</th>
                 </tr>
               </thead>
               <tbody>
