--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <!-- CSS link -->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css"/>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
+
 </head>
 
 <body>
@@ -31,7 +34,7 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron" style="background-color: black; color: white">
-      <h1 class="text-center">Train Scheduler</h1>
+      <h1 class="text-center"><span id="main-title">Train Scheduler</span></h1>
       <h3 class="text-center">All aboard!</h3>
     </div>
 
